force-app/main/default/objects/Car__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>