force-app/main/default/objects/Car__c/fields/ChasisNumber__c.field-meta.xml
<CustomField>
    <fullName>ChasisNumber__c</fullName>
    <label>Chasis Number</label>
    <length>174</length>
    <type>Text</type>
</CustomField>