force-app/main/default/objects/Car__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State  of the Car</label>
    <length>174</length>
    <type>Text</type>
</CustomField>